# bevfusionV2

./: .gitignore  README.md  bevfusionv2_repro.md  main.py  pyproject.toml  setup_and_run.sh  train.py  upload_to_aws.sh
config/: loader.py  nuscenes_mini.yaml
datasets/: nuscenes_bevfusion.py
models/: camera_bev.py  fusion_bev.py  fusion_bev_ipm.py  lidar_bev.py
moral_pipeline/: .gitignore  MoRAL_Progress_2026-02-22.md  MoRAL_Progress_2026-02-23.md  MoRAL_Progress_2026-02-23_FINAL.md  MoRAL_Progress_2026-02-23_Session3_Handoff.md  README.md  README_HF.md  analyze_gt_misses.py  brev_setup.sh  build_condE_jsonl.py  download_from_aws.sh  download_moral_data.py  evaluate_moral.py  evaluate_zeroshot.py  format_detections.py  generate_clean_bev.py  moral_hil_validation.xlsx  moral_human_eval_subset.xlsx  prepare_and_upload_hf.py  render_bev_bbox.py  requirements.txt  run_4090_overnight.sh  run_all_evals.sh  run_all_evals_8B.sh  scene_utils.py  train_cosmos2b.py  train_cosmos8b.py
moral_pipeline/00_generate_camera_only/: generate_camera_only.py
moral_pipeline/01_generate_gt_scenes/: generate_gt_scenes.py
moral_pipeline/02_cosmos_integration/: all_qa_conditionB_sharegpt.jsonl  all_qa_conditionD_sharegpt.jsonl  convert_to_llama_factory.py  generate_cosmos_qa.py  local_vlm_backend.py  moral_report.docx  patch_generate_cosmos_qa.py  scenes_1.txt  scenes_2.txt  scenes_300.txt  val_conditionB_clean.jsonl  val_conditionB_llama_factory.jsonl
moral_pipeline/02_generate_gt_radar_scenes/: generate_gt_radar_scenes.py
tools/: create_data.py
(+141 files in other folders)
